# bus-factor

./: .env.example  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: cli.rs  github.rs  lib.rs  main.rs  tests.rs
