[package]
name = "bus-factor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
dotenv = "0.15.0"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
structopt = "0.3.25"
tokio = { version = "1.6.1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
